learn2turn/src/objects/Process_Job__c.object
<CustomObject>
    <description>Represents one unit of work that is waiting to be processed, being processed, or has been processed successfully or with error.  Jobs may be rerunnable. In the current module, jobs should be all-or-nothing, either they do fail and leave no changes or succeed and do able changes.  Thus, they may always be completely rerun.</description>
    <fields>
        <fullName>Job_Input_JSON__c</fullName>
        <description>Input data for the processor for this job.  Contents are dependent on the process. Deserializing this JSON should create one class that contains all data for the processor to run.</description>
        <inlineHelpText>Input data for the processor for this job.  Contents are dependent on the process. Deserializing this JSON should create one class that contains all data for the processor to run.</inlineHelpText>
        <label>Job Input JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Type_Name__c</fullName>
        <formula>Process_Job_Master__r.Name</formula>
        <label>Job Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Job_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the type of job this is.</description>
        <inlineHelpText>Identifies the type of job this is.</inlineHelpText>
        <label>Process Job Master</label>
        <referenceTo>Process_Job_Master__c</referenceTo>
        <relationshipLabel>Process Jobs</relationshipLabel>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retry_After_Datetime__c</fullName>
        <description>Optional datetime that is the earliest time the job will be restarted.  This is included in case it should always wait for some scheduled process to run before trying again.</description>
        <inlineHelpText>Optional datetime that is the earliest time the job will be restarted.  This is included in case it should always wait for some scheduled process to run before trying again.</inlineHelpText>
        <label>Retry After Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Details__c</fullName>
        <description>Long status description for last run of job.</description>
        <inlineHelpText>Long status description for last run of job.</inlineHelpText>
        <label>Status Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <description>Short status message for last run of job.</description>
        <inlineHelpText>Short status message for last run of job.</inlineHelpText>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Waiting -- Has never run.
Queued -- Waring to run in background.
Processing -- Job is running.
Succeeded -- Ran and succeeded.
Failed -- The last attempt to run failed.
Fatal -- A serious error that prevents attempt at restart occurred.</description>
        <inlineHelpText>Waiting -- Has never run.
Queued -- Waring to run in background.
Processing -- Job is running.
Succeeded -- Ran and succeeded.
Failed -- The last attempt to run failed.
Fatal -- A serious error that prevents attempt at restart occurred.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tries_Exhausted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tries Exhausted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Try_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies the number of attempts to run the job.  Starts as zero.  Should not exceed Max Tries for the job type.</description>
        <inlineHelpText>Identifies the number of attempts to run the job.  Starts as zero.  Should not exceed Max Tries for the job type.</inlineHelpText>
        <label>Try Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Process Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>pj-{000000000}</displayFormat>
        <label>Process Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>